# knockout-paths-elo

./: .gitignore  README.md  pyproject.toml
knockout_paths_elo/: __init__.py  bracket.py  elo_scraper.py  fifa_scraper.py  teams.py
notebooks/: hardest_routes.ipynb  world_cup_2026.ipynb
scripts/: scrape_elo_ratings.py  scrape_fifa_rankings.py
