[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knockout-paths-elo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "requests>=2.31",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.hatch.build.targets.wheel]
packages = ["knockout_paths_elo"]

[tool.setuptools]
packages = []
